server: add top jokes
